<package>
  <name>gazebo_urdf_test</name>
  <version>0.1.0</version>
  <description>
    Test URDF within gazebo
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="fergs@unboundedrobotics.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>urdf</run_depend>
</package>
